--- a/views/cliente/add.ejs
+++ b/views/cliente/add.ejs
@@ -25,5 +25,7 @@
 
         <button type="submit" class="btn">Cadastrar</button>
     </form>
+      <a href="/contrato/add" class="btn">Próximo</a>
+    </form>
 </div>
 <%-include('../rodape.ejs')%>
