--- a/views/site/paginaInicial.ejs
+++ b/views/site/paginaInicial.ejs
@@ -24,7 +24,6 @@
             box-sizing: border-box;
         }
 
-
         body {
             background-color: var(--bege);
             color: var(--marrom-escuro);
@@ -33,8 +32,8 @@
 
         /* Hero */
         .hero {
-            background: url('/img/img.png') no-repeat center/cover;
-            height: 110vh;
+            background: url('https://images.unsplash.com/photo-1476390290743-c2eefe11aa35?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center/cover;
+            height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -156,23 +155,33 @@
 
 
     <section class="hero">
-        <h1>Bem Vindo(a) ao Alphínia</h1>
+        <h1>Hotel Alphínia Palace</h1>
+        <p>ESPACO DE GERENCIAMENTO</p>
     </section>
 
+
+    <section class="sobre2"><a href="/cliente/lst"><button>Gerenciar Clientes</button></a>
+        <a href="/contrato/lst"><button>Gerenciar Contratos</button></a>
+        <a href="/tipquarto/lst"><button>Gerenciar Tipos de Quarto</button></a>
+        <a href="/quarto/lst"><button>Gerenciar Quarto</button></a>
+        <a href="/servico/lst"><button>Gerenciar Serviços</button></a>
+       
+    </section>
 
     <section class="sobre">
         <h2>Bem-vindo à Temporada de Outono no Alphínia Palace</h2>
-        <p> Nessa temporada, o outono ganha vida em cada detalhe: o aroma da madeira aquecida, 
-            o dourado das folhas que dançam ao vento e a tranquilidade que só a natureza pode oferecer.
-            Nosso hotel foi pensado para ser um espaço de descanso, encanto e reconexão. 
-            Entre trilhas, paisagens que mudam de cor a cada amanhecer e ambientes aconchegantes, 
-            convidamos você a desacelerar e aproveitar o que há de mais bonito nesta estação.
+        <p> O Outono chegou ao Hotel Alpinia Palace, trazendo consigo uma nova oportunidade de encantarmos nossos
+            hóspedes com excelência, cuidado e hospitalidade.
+        </p>
+        <p>Em meio às montanhas douradas e ao clima acolhedor da estação, cada detalhe conta.
+            Seu trabalho faz parte da experiência que transforma a estadia de nossos visitantes em algo memorável.
+            Seja na recepção calorosa, na organização impecável dos quartos ou no atendimento atencioso, você é
+            essencial para o sucesso desta temporada.
+            Vamos juntos oferecer um outono dos sonhos — com dedicação, profissionalismo e o charme que só o Alpinia
+            Palace tem.
         </p>
     </section>
 
-     <section class="sobre2">
-        <a href="/cliente/add" class="bnt add">Comece sua reserva</a>
-    </section>
 
 
     <section class="cards">
@@ -204,4 +213,3 @@
 </body>
 
 </html>
-
